# boatrace_playground

./: Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: lint.yml  test.yml
docker/tools/: Dockerfile
jake/: main.py
tests/test_jake/: test_jake.py
